Update gateway-service/src/test/java/org/zowe/apiml/gateway/filters/proxyheaders/AdditionalRegistrationGatewayRegistryTest.java
Co-authored-by: Elena Kubantseva <elena.kubantseva@broadcom.com>
Signed-off-by: Richard Salač <richard.salac@broadcom.com>